src/gui/image/qicon_p.h
@@ -71,6 +71,7 @@ public:
     QAtomicInt ref;
     int serialNum;
     int detach_no;
+    bool is_mask;
 };
 
 
